...
import {StyledButton} from './StyledButton';

const BuggyCart = (): React.ReactElement => {
  return (
    <StyledButton
      testID="add-to-cart-button-error-product"
      title="Add to cart"
      onPress={() => {
        throw new Error('Error boundary triggered from error product card');
      }}
      style={{
        default: styles.addToCartButton,
        pressed: styles.addToCartButton,
...
