...
    navigation.navigate('ProductDetail', item);
  };

  return (
    <SafeAreaView style={styles.screen}>
      <View style={styles.titleContainer}>
        <Text style={styles.title}>Empower Plant</Text>
      </View>
      <View>
        <Sentry.TimeToFullDisplay record={recordFullDisplay} />
        <FlatList
          id={'productList'}
          onRefresh={onProductsListRefresh}
...
